vendored_parsers/tree-sitter-gleam/test/corpus/external_types.txt
================================================================================
External types
================================================================================

type IODevice
type IODevice()
type Map(key, value)

--------------------------------------------------------------------------------

(source_file
  (external_type
    (type_name
      name: (type_identifier)))
  (external_type
    (type_name
      name: (type_identifier)
      parameters: (type_parameters)))
  (external_type
    (type_name
      name: (type_identifier)
      parameters: (type_parameters
        (type_parameter)
        (type_parameter)))))

================================================================================
Public external types
================================================================================

pub type IODevice
pub type IODevice()
pub type Map(key, value)

--------------------------------------------------------------------------------

(source_file
  (external_type
    (visibility_modifier)
    (type_name
      name: (type_identifier)))
  (external_type
    (visibility_modifier)
    (type_name
      name: (type_identifier)
      parameters: (type_parameters)))
  (external_type
    (visibility_modifier)
    (type_name
      name: (type_identifier)
      parameters: (type_parameters
        (type_parameter)
        (type_parameter)))))
